# icpc-companion

./: .gitignore  .goreleaser.yaml  AGENTS.md  LICENSE  Makefile  README.md  go.mod  pyproject.toml
.github/workflows/: release.yml
cmd/comp/: completion.go  listen.go  root.go  run.go  setup.go  solve.go  test.go
internal/config/: config.go
internal/fs/: fs.go
internal/platform/: atcoder.go  codeforces.go  generic.go  manager.go  types.go  vjudge.go
internal/runner/: dry.go  run.go  runner.go
internal/server/: server.go
internal/tester/: tester.go
internal/util/: vscode.go
puc_rio_cp/: config.py  main.py
puc_rio_cp/downloader/: problem_downloader.py  problem_info.py  server.py
puc_rio_cp/tester/: test.py
