[project]
name = "puc-rio-cp"
version = "0.2.4"
description = "Competitive programming problem downloader and tester for PUC-Rio students"
authors = [
    {name = "tomytp", email = "thomazrebellomiranda@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click (>=8.1.8,<9.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
comp = "puc_rio_cp.main:cli" # entry point

[tool.poetry]
packages = [
    {include = "puc_rio_cp"}
]
